fix - right now time slot can now collapse

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -152,7 +152,6 @@
 	display: none;
 }
 
-.tribe-events-loop-day-today .tribe-events-day-grouping-is-now[data-tribe-grouphasevents] .post-tribe-events-day-group-event,
 .tribe-events-loop-day-today .tribe-events-day-grouping-is-active[data-tribe-grouphasevents] .post-tribe-events-day-group-event,
 .tribe-events-loop-day-not-today .tribe-events-day-grouping-is-active[data-tribe-grouphasevents] .post-tribe-events-day-group-event {
 	display: block;
